--- a/app/javascript/src/homeComponents/home.scss
+++ b/app/javascript/src/homeComponents/home.scss
@@ -15,6 +15,14 @@ body {
 //   position: fixed;
 // }
 
+a {
+  text-decoration: none;
+}
+
+.language-menu {
+  color: #777;
+}
+
 .navbar {
   background-color: #fff;
 }
@@ -34,14 +42,11 @@ body {
 
 .main {
   margin-top: 50px;
+  background-color: grey;
 }
 
 .front-card {
   margin-top: 70px;
-}
-
-.welcome, .welcome a {
-  color: #fff;
 }
 
 #welcome-text {
@@ -72,16 +77,16 @@ body {
   border-radius: 5px;
 }
 
+.log-in .row {
+  padding: 12px;
+}
+
 .log-in {
   padding-bottom: 6px;
 }
 
 .log-in .form-group {
   padding: 0;
-}
-
-.log-in div:nth-child(2) {
-  margin-bottom: 5px;
 }
 
 .log-in label, .log-in a {
@@ -96,6 +101,7 @@ body {
 
 .sign-up {
   margin-top: 10px;
+  overflow:hidden
 }
 
 .dropdown-menu {
@@ -113,8 +119,8 @@ body {
 #sign-up-btn {
   background-color: #ffac33;
   background-image: linear-gradient(#ffcc4d,#ffac33);
-  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffcc4d, endColorstr=#ffac33, GradientType=0)";
   border-color: #f1a02a;
   color: #292f33;
   text-shadow: 0 1px 0 rgba(255,255,255,0.5);
+  float: right;
 }
