--- a/app/javascript/src/homeComponents/home.scss
+++ b/app/javascript/src/homeComponents/home.scss
@@ -6,14 +6,14 @@ body {
   min-width: 900px;
 }
 
-// #homeback {
-//   background-image: url(<%= asset_path 'background_1.png' %>);
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   min-height: 100vh;
-//   min-width: 100vw;
-//   position: fixed;
-// }
+.main {
+  background-image: url('/assets/background_2.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  min-width: 100vw;
+  position: fixed;
+}
 
 a {
   text-decoration: none;
@@ -47,6 +47,10 @@ a {
 
 .front-card {
   margin-top: 70px;
+}
+
+.welcome, .welcome a {
+  color: #fff;
 }
 
 #welcome-text {
